--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "host" : "localhost",
-    "user" : "root",
-    "password" : "team6rocks",
-    "database" : "bitly"
+    "host" : "",
+    "user" : "",
+    "password" : "",
+    "database" : ""
 }
 
