--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "sqlserver",
   "version": "1.0.0",
   "scripts": {
-    "start": "node app.js"
+    "start": "sudo nodejs app.js"
   },
   "dependencies": {
     "body-parser": "^1.14.1",
